root_extra_deps = [ "//chromiumcontent:chromiumcontent" ]
is_electron_build = true
is_component_build = true
is_debug = true
symbol_level = 2
use_allocator = "none"    # on Linux this defaults to "tcmalloc", but tcmalloc deadlocks when Electron CI tests are run inside Docker
enable_nacl = false
enable_widevine = true
proprietary_codecs = true
is_component_ffmpeg = true
ffmpeg_branding = "Chrome"

# Always use the system provided standard library
use_custom_libcxx = false

# Jumbo build should improve compilation times.
# https://chromium.googlesource.com/chromium/src/+/master/docs/jumbo.md
use_jumbo_build = true
if (target_cpu == "arm64") {
  # Temporary disable on arm64 due to "error: '__' macro redefined".
  # Should be enabled back eventually.
  use_jumbo_build = false
}

# This is required by Node.js
# See https://github.com/nodejs/node/pull/13242
v8_promise_internal_field_count = 1

# On ARM64 Linux, use system provided freetype library to prevent this build failure:
# warning: libfreetype.so.6, needed by ../../build/linux/debian_jessie_arm64-sysroot/usr/lib/aarch64-linux-gnu/libfontconfig.so, may conflict with libfreetype.so.6
if (target_cpu == "arm64") {
  use_system_freetype = true
}

# Configuration for mips64el
if (target_cpu == "mips64el") {
  clang_use_chrome_plugins = false
  enable_hangout_services_extension = true
  enable_nacl_nonsfi = false
  fatal_linker_warnings = false
  fieldtrial_testing_like_official_build = true
  is_clang = false
  link_pulseaudio = true
  linux_use_bundled_binutils = false
  remove_webcore_debug_symbols = true
  treat_warnings_as_errors = false
  use_allocator = "none"
  use_cups = true
  use_gconf = false
  use_gnome_keyring = false
  use_gold = false
  use_kerberos = true
  use_pulseaudio = true
  if (target_cpu == host_cpu) {
    use_sysroot = false
  }
}
