# There are some executable targets whose products are ran during build.
# This config is applied to those targets because we need to give them some
# special treatment.
config("build_time_executable") {
  configs = []

  # The executables which have this config applied are dependent on ICU,
  # which is always a shared library in an Electron build. However, in the
  # non-component build, Linux executables don't have rpath set to search for
  # libraries in the executable's directory, so ICU cannot be found. So let's
  # make sure rpath is set here.
  # See '//build/config/gcc/BUILD.gn' for details on the rpath setting.
  if (is_electron_build && is_linux && !is_component_build) {
    configs += [ "//build/config/gcc:rpath_for_built_shared_libraries" ]
  }

  if (is_electron_build && is_mac && !is_component_build) {
    ldflags = [
      "-Wl,-rpath,@loader_path/."
    ]
  }
}

# For MAS build, we force defining "MAS_BUILD".
config("mas_build") {
  if (is_mas_build) {
    defines = [ "MAS_BUILD" ]
  }
}
